--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /.vs/KaTalk_NoAd/v15
 /KaTalk_NoAd/Debug
 /KaTalk_NoAd/x64/Debug
+/KaTalk_NoAd/x64/Release/KaTalk_NoAd.tlog
+/KaTalk_NoAd/x64/Release
