대기 10초로 늘림

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /KaTalk_NoAd/x64/Debug
 /KaTalk_NoAd/x64/Release/KaTalk_NoAd.tlog
 /KaTalk_NoAd/x64/Release
+/x64/Release/KaTalk_NoAd.iobj
+/x64/Release/KaTalk_NoAd.ipdb
