--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-﻿################################################################################
+################################################################################
 # 이 .gitignore 파일은 Microsoft(R) Visual Studio에서 자동으로 만들어졌습니다.
 ################################################################################
 
@@ -9,3 +9,6 @@
 /KaTalk_NoAd/x64/Release
 /x64/Release/KaTalk_NoAd.iobj
 /x64/Release/KaTalk_NoAd.ipdb
+*.aps
+*.user
+*.pdb
